# watchtower-race-be

./: Cargo.toml  Rocket.toml  docker-compose.yml  rust-toolchain
migrations/2022-08-03-232141_add_score_table/: up.sql
src/: main.rs  schema.rs
